--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -92,11 +92,13 @@ jobs:
             dockerfile: ./Dockerfile
             build-args: APP_ENV=production
             ecr-repo-name: sample_app/web_app
+            target: production
           - app: web-server
             build-context: ./docker/nginx
             dockerfile: ./docker/nginx/Dockerfile
             build-args: ''
             ecr-repo-name: sample_app/web_server
+            target: production
 
     outputs:
       # タグ付きイメージを渡したいところですが、env.AWS_ACCOUNT_IDがsecretsでマスキングされるのでECRリポジトリ名を渡します。
@@ -119,7 +121,7 @@ jobs:
           mask-password: 'true'
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Build and push to Amazon ECR
         uses: docker/build-push-action@v4
@@ -130,6 +132,7 @@ jobs:
           context: ${{ matrix.build-context }}
           file: ${{ matrix.dockerfile }}
           build-args: ${{ matrix.build-args }}
+          target: ${{ matrix.target }}
           tags: ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ matrix.ecr-repo-name }}:${{ needs.build-tag.outputs.tag }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -204,7 +207,7 @@ jobs:
 
       - name: Deploy to Amazon ECS service
         id: deploy
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v2
         with:
           task-definition: ${{ steps.modify-task-definition-image-web-server.outputs.task-definition }}
           service: ${{ secrets.ECS_SERVICE_NAME_WEB }}
