--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -288,7 +288,7 @@ jobs:
   
       - name: Register new AWS Batch job definition
         run: |
-          aws batch register-job-definition --cli-input-json job-definition.json
+          aws batch register-job-definition --cli-input-json file://job-definition.json
 
   notify:
     needs:
