--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -159,6 +159,7 @@ jobs:
   render-ecs-task-definition-and-deploy:
     needs:
       - check-active-deployments
+      - build-tag
       - build-and-push-image
 
     runs-on: ubuntu-latest
@@ -228,6 +229,8 @@ jobs:
 
   render-batch-default-job-definition:
     needs:
+      - build-tag
+      - build-and-push-image
       - render-ecs-task-definition-and-deploy
 
     runs-on: ubuntu-latest
